--- a/full-stack/projeto-travelgram/index.html
+++ b/full-stack/projeto-travelgram/index.html
@@ -10,8 +10,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi repellat veniam, harum explicabo impedit incidunt sunt at commodi debitis nisi ex enim corporis. Fugiat beatae fugit nobis consectetur? Voluptatibus.
-    </p>
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="Logo Travelgram">
+            </a>
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa">
+                    </a>
+                </li>
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#">
+                    <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                </a></li>
+            </ul>
+        </nav>
+    </div>
+    <header>
+
+    </header>separete
 </body>
 </html>
