--- a/full-stack/formulario-de-matricula/index.html
+++ b/full-stack/formulario-de-matricula/index.html
@@ -13,13 +13,28 @@
     <div id="app">
         <main>
             <div class="main-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis architecto voluptatibus laborum. Mollitia consequuntur veniam vero et dicta tenetur ea quidem harum ducimus ipsam nam, non eos, totam, minima sapiente.
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="">
+                    <span>Voltar</span>
+                </div>
+                <h1> Formulário de matrícula</h1>
+                <p>
+                    Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.
+                </p>
             </div>
         </main>
 
         <aside>
             <div class="aside-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, non excepturi commodi, optio animi cum, minus libero quia architecto veniam cumque harum. Expedita aspernatur at nisi assumenda et, neque ipsa?
+                <header>
+                    <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
+                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                    <p>
+                        Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.
+                    </p>
+                </header>
+
+                <img src="assets/Illustration.svg" alt="Ilustração de professora numa roda de ensino com alunos">
             </div>
         </aside>
     </div>
