Add utilitys styles

--- a/full-stack/zingen/index.html
+++ b/full-stack/zingen/index.html
@@ -10,12 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Qualquer Coisa</h1>
-    <h2>Qualquer Coisa</h2>
-    <h3>Qualquer Coisa</h3>
-    <a href="#">Qualquer</a>
-    <ul role="list">
-        <li>otem</li>
-    </ul>
+    <header>
+        <div class="container even-columns">
+            <h2>Lado A</h2>
+            <h2>Lado B</h2>
+        </div>
+    </header>
 </body>
 </html>
