--- a/full-stack/zingen/index.html
+++ b/full-stack/zingen/index.html
@@ -10,9 +10,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="flex gap-1">
-        <a href="#" class="btn btn-sm">Label</a>
-        <button href="#" class="btn btn-md primary">Label</button>
+    <header>
+        <div class="container py-base">
+            <nav class="flex items-center gap-1.5">
+                <a href="#">
+                    <img src="assets/logo.svg" alt="">
+                </a>
+
+                <a href="#about" class="desktop-only">Conheça o app</a>
+                <a href="#features" class="desktop-only">Funcionalidades</a>
+                <a href="#pricing" class="desktop-only">Preços</a>
+
+                <a href="#download" class="btn btn-sm">Baixe Agora</a>
+            </nav>
+        </div>
     </header>
+
+    <section id="hero">
+        <div class="container py-xl">
+            <img src="assets/music-bars.svg" alt="">
+            <h1>Quem canta seus males espanta</h1>
+            <p>Cantar nunca foi tão fácil</p>
+
+            <div class="buttons flex items-center gap-1">
+                <a href="#pricing" aria-label="Ver planos" class="btn btn-md"></a>
+                <a href="#dowload" class="btn btn-md">Baixe Agora</a>
+                
+            </div>
+        </div>
+    </section>
+
+    <section id="smartphones-img">
+        <div class="container"></div>
+        <img src="assets/App mockups.png" alt="Imagem de dois celulares">
+    </section>
+    <section id="about">
+        <div class="container even-columns py-xl items-center">
+            <div>
+                <header>
+                    <strong>Conheça o app</strong>
+                    <h2>O aplicativo perfeito para aprender a cantar</h2>
+                </header>
+                <p>Nosso algoritmo de Inteligência Artificial permite remover a voz original e manter as melodias das músicas. Dessa forma, temos o maior repertório musical para Karaokê! Além disso, ao cantar, sua voz e afinação é comparada pelo algoritmo permitindo uma avaliação precisa da sua performance te ajudando a melhorar seu canto. </p>
+            </div>
+            <div class="desktop-only">
+                <img src="assets/App mockups.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
