Finish project, add color li and footer font, make text title h3 correct.

--- a/full-stack/desafios/local_turistico/index.html
+++ b/full-stack/desafios/local_turistico/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
     <title>Busan</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -45,7 +46,7 @@
         
         <section>
             <img src="assets/images/Image_03.png" alt="">
-            <h3>2. Parque Yongdusan</h3>
+            <h3>2. Templo Beomeo-sa</h3>
             <p>
                 O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
             </p>
@@ -57,7 +58,7 @@
 
         <section>
             <img src="assets/images/Image_04.png" alt="">
-            <h3>3. Templo Haedong Yonggungsa</h3>
+            <h3>3. Parque Yongdusan</h3>
             <p>
                 O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
 
@@ -70,12 +71,12 @@
             </ul>
         </section>
         <hr>
+        <p>
+            As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
+        </p>
         <footer>
-            <p>
-                As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
-            </p>
 
-            <span>Feito com ♥ pela Rocketseat</span>
+            <p>Feito com ♥ pela Rocketseat</p>
         </footer>
     </main>
 </body>
